--- a/base-infinite-swapi/src/App.css
+++ b/base-infinite-swapi/src/App.css
@@ -2,4 +2,17 @@
   position: fixed;
   top: 5px;
   right: 5px;
+  color:green
+}
+.error{
+  position: fixed;
+  top: 5px;
+  right: 5px;
+  color:red;
+}
+.fetching{
+  position: fixed;
+  top: 5px;
+  right: 5px;
+  color: yellow;
 }
